--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "aquameter-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend server for AquaMeter app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jonathan Ayop",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
