--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://aquameter_user:q0JSnRKWQlpJrgHlKostKPTOXN9Rz0xp@dpg-d3ht4abuibrs73b6qkgg-a.singapore-postgres.render.com/aquameter
 PORT=10000
+RENDER=true
